bg colour changed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BISWA CONTACT PAGE</title>
 </head>
-<body>
+
+    <body bgcolor="LIGHT BLUE">
     <P><H1>CONTACT US</H1></P>
     <H2>If you have any questions, feel free to reach out!</H2>
     <MAIN>
